fixed overflow issue for ios (safari)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,16 +9,11 @@
   max-width: 100%;
 }
 
-body {
-  overflow-x: none;
+html, body {
+  position: relative; /* to disale scroll on ios*/
   background-color: #fde9e2;
   height: 100%; /* remove this totally upon launch*/
-  overflow-y: hidden; /* remove this totally upon launch*/
-}
-
-html {
-  font-size: 16px;
-  scroll-behavior: smooth;
+  overflow: hidden; /* remove this totally upon launch*/
 }
 
 img {
